@@ -1,0 +1,12 @@
+﻿// <copyright file="IComplement.cs" company="Mark Final">
+//  Opus
+// </copyright>
+// <summary>Opus Core</summary>
+// <author>Mark Final</author>
+namespace Opus.Core
+{
+    public interface IComplement<T>
+    {
+        T Complement(T other);
+    }
+}
