@@ -14,5 +14,7 @@ namespace Opus.Core
         }
 
         public abstract object Clone();
+
+        public abstract Option Complement(Option other);
     }
 }
